MC pets section
I added authorization (commented for now) and added properties to the swagger.json file.
